# adbc-spanner

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  REVIEW.md  build.rs  deny.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: adbc-validation.yml  bench.yml  ci.yml  clang-format.yml  foundry-validation.yml  fuzz.yml  libraries.yml  real-spanner.yml  resilience.yml
adbc-validation/: .clang-format  CMakeLists.txt  README.md  asan_canary.cc  spanner_validation.cc
benches/: conversion.rs
docs/: adbc.md  dbt.md  options.md  testing.md  transactions.md
foundry-validation/: README.md  pytest.ini  skip_baseline.txt
foundry-validation/queries/spanner/ingest/: int16.txtcase  int32.txtcase  time_s.txtcase  timestamp_s.txtcase
foundry-validation/queries/spanner/type/bind/: boolean.txtcase  date.txtcase  float16.txtcase  int32.txtcase  string.txtcase  timestamptz_ms.txtcase  timestamptz_s.txtcase  timestamptz_us.txtcase
foundry-validation/queries/spanner/type/literal/: float32.txtcase  int16.txtcase  int32.txtcase  timestamptz.txtcase
foundry-validation/queries/spanner/type/select/: float32.txtcase  int64.txtcase  string.txtcase  timestamp.txtcase
foundry-validation/tests/: conftest.py  spanner.py  test_connection.py  test_ingest.py  test_query.py  test_statement.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: directed_read.rs  keyword.rs  like.rs  options.rs  params.rs  partition.rs  sql.rs  staleness.rs  uri.rs  values.rs
fuzz/seeds/keyword/: commented-ddl  hint-literal  hinted-dml  terminators
fuzz/seeds/like/: mixed  percent
fuzz/seeds/params/: named  raw-triple
fuzz/seeds/partition/: bare-bignum-query-descriptor  enveloped-bad-version  enveloped-bignum-query-descriptor  enveloped-query-descriptor  query-descriptor  read-descriptor
fuzz/seeds/sql/: block-comment  ddl-batch  escaped-quote  line-comment  quoted-semicolon
fuzz/seeds/values/: numeric-neg  numeric-plus  timestamp  timestamp-offset
python/: .gitignore  README.md  pyproject.toml  setup.py
python/adbc_driver_spanner/: __init__.py  _options.py  _version.py  dbapi.py
python/benchmarks/: README.md  benchmark_polars.py  perf_read.py  profile_stages.py
python/tests/: conftest.py  test_dataframes.py  test_differential_oracle.py  test_emulator_e2e.py  test_options.py  test_readme_cookbook.py  test_smoke.py
python/validation/: README.md
python/validation/queries/spanner/ingest/: binary_view.txtcase  decimal_scale_zero.txtcase  fixed_size_binary.txtcase  string_view.txtcase  timestamptz_ms.txtcase
python/validation/queries/spanner/type/bind/: binary.txtcase  binary_view.txtcase  decimal.txtcase  float32.txtcase  float64.txtcase  int16.txtcase  int64.txtcase  large_binary.txtcase  large_string.txtcase  string_view.txtcase  timestamp_s.txtcase  timestamptz_ns.txtcase
python/validation/queries/spanner/type/literal/: decimal.txtcase  float64.txtcase  int64.txtcase  timestamp.txtcase
python/validation/queries/spanner/type/select/: binary.txtcase  boolean.txtcase  date.txtcase  float64.txtcase  int16.txtcase  int32.txtcase  timestamptz.txtcase
python/validation/tests/: conftest.py  spanner.py  test_connection.py
scripts/: run-adbc-validation.sh  run-foundry-validation.sh  with-emulator.sh  with-toxiproxy.sh
src/: asan_canary.rs  bind.rs  connection.rs  conversion.rs  ddl.rs  dialect.rs  directed_read.rs  driver.rs  error.rs  ffi.rs  info.rs  interval.rs  lib.rs  nested.rs  objects.rs  options.rs  query_options.rs  request.rs  retry.rs  runtime.rs  sql.rs  staleness.rs  statement.rs  statistics.rs  timeout.rs
tests/: RESILIENCE.md  emulator.rs  integration.rs  mock_spanner.rs  resilience.rs
