[package]
name = "adbc-spanner"
version = "0.3.9"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
description = "ADBC (Arrow Database Connectivity) driver for Google Cloud Spanner"
repository = "https://github.com/fornwall/adbc-spanner"
homepage = "https://github.com/fornwall/adbc-spanner"
documentation = "https://docs.rs/adbc-spanner"
readme = "README.md"
keywords = ["adbc", "arrow", "spanner", "database", "gcp"]
# Both slugs are valid crates.io categories.
categories = ["database", "api-bindings"]
# Keep the published package to what a consumer needs; CI, scripts and the crate lock
# are not useful to downstream builds.
exclude = [".github/", "scripts/", "/fuzz", "/Cargo.lock"]

[package.metadata.docs.rs]
# Document the FFI entrypoint too.
all-features = true

# Release automation via cargo-release (https://github.com/crate-ci/cargo-release).
[package.metadata.release]
# Only cut releases from main.
allow-branch = ["main"]
# Tag as vX.Y.Z — this matches the `tags: ["v*"]` trigger of the shared-library release
# workflow, so pushing the tag builds and attaches the platform libraries to the GitHub Release.
tag-name = "v{{version}}"
tag-message = "Release {{version}}"
pre-release-commit-message = "Release {{version}}"
# Publishing is disabled while the google-cloud-* crates are pinned to git (see the dependency
# note below) — crates.io rejects git dependencies. Re-enable once those are versioned releases.
publish = false
push = true

[lib]
# cdylib: the loadable ADBC driver shared library
#         (libadbc_spanner.so / libadbc_spanner.dylib / adbc_spanner.dll).
# rlib:   lets Rust code depend on this crate directly.
crate-type = ["cdylib", "rlib"]

[features]
default = ["ffi"]
# Export the C ABI `AdbcSpannerInit` entrypoint so the cdylib is a driver the ADBC
# driver manager (any language) can load. Disable for a pure-Rust rlib dependency.
ffi = ["dep:adbc_ffi"]
# Exposes internal parsing helpers under `adbc_spanner::fuzzing` for the fuzz targets.
# Not a stable API; used only by the `fuzz/` crate. Pulls in `arbitrary` so the
# option-fuzzing entry point can take a derived-`Arbitrary` input type.
fuzzing = ["dep:arbitrary"]

[dependencies]
# The abstract ADBC driver traits (Driver / Database / Connection / Statement).
adbc_core = "0.23"
# C FFI driver exporter: generates the `AdbcSpannerInit` entrypoint for the shared library.
adbc_ffi = { version = "0.23", optional = true }
# Arrow types the ADBC traits are expressed in. Kept in the range adbc_core allows
# so the RecordBatch / Schema / RecordBatchReader types unify across the crates.
arrow-array = ">=53.1, <59"
arrow-schema = ">=53.1, <59"
# Offset / null buffers for building Arrow List arrays (ARRAY columns).
arrow-buffer = ">=53.1, <59"
# --- google-cloud-* pinned to a git revision (temporary) ---
# We map Spanner STRUCT columns to native Arrow Struct types, which needs
# `Type::struct_type()` to introspect struct field names/types. That accessor
# exists on google-cloud-rust `main` but is NOT in a crates.io release yet (the
# latest, 0.34.2-preview, lacks it). Until a release ships it, we pin the whole
# google-cloud family (spanner + auth + lro + admin) to the SAME git revision so
# their shared internal crates (gax, gaxi, ...) resolve to one compatible copy.
# NOTE: git dependencies cannot be published to crates.io — switch these back to
# versioned releases once `Type::struct_type()` is published.
google-cloud-spanner = { git = "https://github.com/fornwall/google-cloud-rust", rev = "3872d2885c6da3a9463e85b50bf1fe8e9ddc1fa1" }
# Anonymous / service-account credentials.
google-cloud-auth = { git = "https://github.com/fornwall/google-cloud-rust", rev = "3872d2885c6da3a9463e85b50bf1fe8e9ddc1fa1" }
# The `Poller` trait, to await the admin `UpdateDatabaseDdl` long-running operation used for DDL.
google-cloud-lro = { git = "https://github.com/fornwall/google-cloud-rust", rev = "3872d2885c6da3a9463e85b50bf1fe8e9ddc1fa1" }
# The Spanner client is async; we bridge it to the synchronous ADBC traits with a
# dedicated multi-thread runtime.
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
serde_json = "1"
base64 = "0.22"
# Parsing Spanner's string-encoded DATE / TIMESTAMP values into Arrow Date32 / Timestamp, and
# formatting them (plus NUMERIC) back to those wire strings when binding parameters.
chrono = { version = "0.4", default-features = false, features = ["std"] }
# Only pulled in by the `fuzzing` feature: derives `Arbitrary` for the option-fuzz input type.
arbitrary = { version = "1", features = ["derive"], optional = true }

# Lints applied in local dev too (CI additionally runs `clippy -D warnings`).
[lints.rust]
unexpected_cfgs = "warn"
[lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "warn"

[profile.release]
# Smaller shipped shared libraries.
strip = true
lto = "thin"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
# Property-based round-trip testing of the driver against the emulator (integration test only).
proptest = "1"
# Driver manager: loads the built cdylib through the C ABI for the FFI smoke test.
adbc_driver_manager = "0.23"
# Admin clients, used by the emulator integration test to create the test instance and database.
# Pinned to the same git revision as the google-cloud family above (see the note there).
google-cloud-spanner-admin-instance-v1 = { git = "https://github.com/fornwall/google-cloud-rust", rev = "3872d2885c6da3a9463e85b50bf1fe8e9ddc1fa1" }
google-cloud-spanner-admin-database-v1 = { git = "https://github.com/fornwall/google-cloud-rust", rev = "3872d2885c6da3a9463e85b50bf1fe8e9ddc1fa1" }
