[package]
name = "adbc-spanner"
version = "0.6.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
description = "ADBC (Arrow Database Connectivity) driver for Google Cloud Spanner"
repository = "https://github.com/fornwall/adbc-spanner"
homepage = "https://github.com/fornwall/adbc-spanner"
documentation = "https://docs.rs/adbc-spanner"
readme = "README.md"
keywords = ["adbc", "arrow", "spanner", "database", "gcp"]
# Both slugs are valid crates.io categories.
categories = ["database", "api-bindings"]
# Keep the published package to what a consumer needs; CI, scripts and the crate lock
# are not useful to downstream builds.
exclude = [".github/", "scripts/", "/fuzz", "/adbc-validation", "/Cargo.lock"]

[package.metadata.docs.rs]
# Document the FFI entrypoint too.
all-features = true

# Release automation via cargo-release (https://github.com/crate-ci/cargo-release).
[package.metadata.release]
# Only cut releases from main.
allow-branch = ["main"]
# Tag as vX.Y.Z — this matches the `tags: ["v*"]` trigger of the shared-library release
# workflow, so pushing the tag builds and attaches the platform libraries to the GitHub Release.
tag-name = "v{{version}}"
tag-message = "Release {{version}}"
pre-release-commit-message = "Release {{version}}"
# Refuse to create/push the release tag unless the checks CI also enforces pass locally
# first. cargo-release pushes the "Release X.Y.Z" commit and the vX.Y.Z tag together, and the
# tag triggers the irreversible publish workflow (libraries.yml → PyPI wheels + GitHub Release
# assets); a red commit must never get that far. This mirrors ci.yml's gates (fmt, clippy, the
# test suite) before the tag is minted. The emulator-gated integration/resilience tests
# self-skip offline, so this hook covers the unit tests + doctests locally; the ci-gate job in
# libraries.yml additionally blocks publishing until the full CI run (emulator included) is
# green on the tagged commit.
pre-release-hook = ["sh", "-c", "cargo fmt --all --check && cargo clippy --all-targets --all-features -- -D warnings && cargo test"]
# Keep the Python package's checked-in dev-fallback version in step with the crate. Release
# wheels do not depend on it (CI overwrites the file from the pushed tag), this just stops the
# committed copy from drifting.
pre-release-replacements = [
    { file = "python/adbc_driver_spanner/_version.py", search = "__version__ = \"[0-9][^\"]*\"", replace = "__version__ = \"{{version}}\"", exactly = 1 },
]
# Publishing is disabled while the google-cloud-* crates are pinned to git (see the dependency
# note below) — crates.io rejects git dependencies. Re-enable once those are versioned releases.
publish = false
push = true

[lib]
# cdylib: the loadable ADBC driver shared library
#         (libadbc_spanner.so / libadbc_spanner.dylib / adbc_spanner.dll).
# rlib:   lets Rust code depend on this crate directly.
crate-type = ["cdylib", "rlib"]

[features]
default = ["ffi"]
# Export the C ABI `AdbcSpannerInit` entrypoint so the cdylib is a driver the ADBC
# driver manager (any language) can load. Disable for a pure-Rust rlib dependency.
ffi = ["dep:adbc_ffi"]
# Exposes internal parsing helpers under `adbc_spanner::fuzzing` for the fuzz targets.
# Not a stable API; used only by the `fuzz/` crate. Pulls in `arbitrary` so the
# option-fuzzing entry point can take a derived-`Arbitrary` input type.
fuzzing = ["dep:arbitrary"]

[[bench]]
# Criterion benchmarks over the Spanner-rows → Arrow conversion hot path (src/conversion.rs),
# run offline (no network/emulator) via `cargo bench`.
name = "conversion"
harness = false

[dependencies]
# Two dependency families are pinned to git revisions (temporary). When reverting either to a
# versioned crates.io release, follow the single revert checklist in CLAUDE.md "Temporary git
# pins" — it enumerates every location (all these Cargo.toml lines, deny.toml, README.md, the
# `publish = false` release gate) and the invariant that the three arrow-adbc crates share one rev.
# --- adbc_core / adbc_ffi pinned to a git revision (temporary) ---
# The abstract ADBC driver traits, and the C FFI driver exporter that generates the
# `AdbcSpannerInit` entrypoint for the shared library. Pinned to a fork of
# apache/arrow-adbc carrying two fixes that are not in the latest crates.io release (0.23):
#   1. `release_ffi_error` is idempotent — it nulls the error's message / private_data /
#      release pointers after freeing, so a second release (which consumers do via the
#      standard `if (error.release) error.release(&error)` idiom) is a safe no-op rather
#      than a double-free. Already on arrow-adbc `main`; only missing from the 0.23 release.
#   2. `AdbcStatementExecuteQuery` writes `rows_affected = -1` on the query path (a result
#      stream was requested) instead of leaving the caller's out-parameter untouched.
#      Submitted upstream as https://github.com/apache/arrow-adbc/pull/4469.
# Both let the C++ `adbc_validation` suite behave correctly against this driver (see
# adbc-validation/). Revert to a versioned crates.io release once these ship.
adbc_core = { git = "https://github.com/fornwall/arrow-adbc", rev = "786e7f3488eb71b200ece775b027a647cf42db9e" }
adbc_ffi = { git = "https://github.com/fornwall/arrow-adbc", rev = "786e7f3488eb71b200ece775b027a647cf42db9e", optional = true }
# Arrow types the ADBC traits are expressed in. Kept in the range the (git) adbc crates
# allow (>=58, <60) so the RecordBatch / Schema / RecordBatchReader types unify across them.
arrow-array = ">=58, <60"
arrow-schema = ">=58, <60"
# Offset / null buffers for building Arrow List arrays (ARRAY columns).
arrow-buffer = ">=58, <60"
# --- google-cloud-* pinned to a git revision (temporary) ---
# We map Spanner STRUCT columns to native Arrow Struct types, which needs
# `Type::struct_type()` to introspect struct field names/types. That accessor
# exists on google-cloud-rust `main` but is NOT in a crates.io release yet (the
# latest, 0.34.2-preview, lacks it). Until a release ships it, we pin the whole
# google-cloud family (spanner + auth + lro + admin) to the SAME git revision so
# their shared internal crates (gax, gaxi, ...) resolve to one compatible copy.
# NOTE: git dependencies cannot be published to crates.io — switch these back to
# versioned releases once `Type::struct_type()` is published.
google-cloud-spanner = { git = "https://github.com/fornwall/google-cloud-rust", rev = "3872d2885c6da3a9463e85b50bf1fe8e9ddc1fa1" }
# Anonymous / service-account credentials.
google-cloud-auth = { git = "https://github.com/fornwall/google-cloud-rust", rev = "3872d2885c6da3a9463e85b50bf1fe8e9ddc1fa1" }
# The `Poller` trait, to await the admin `UpdateDatabaseDdl` long-running operation used for DDL.
google-cloud-lro = { git = "https://github.com/fornwall/google-cloud-rust", rev = "3872d2885c6da3a9463e85b50bf1fe8e9ddc1fa1" }
# The Spanner client is async; we bridge it to the synchronous ADBC traits with a
# dedicated multi-thread runtime.
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
# `stream::iter` + `StreamExt::buffer_unordered` to run the per-table `get_statistics`
# aggregate scans with bounded concurrency on the shared runtime.
futures-util = "0.3"
serde_json = "1"
base64 = "0.22"
# Parsing Spanner's string-encoded DATE / TIMESTAMP values into Arrow Date32 / Timestamp, and
# formatting them (plus NUMERIC) back to those wire strings when binding parameters.
chrono = { version = "0.4", default-features = false, features = ["std"] }
# Only pulled in by the `fuzzing` feature: derives `Arbitrary` for the option-fuzz input type.
arbitrary = { version = "1", features = ["derive"], optional = true }

# Lints applied in local dev too (CI additionally runs `clippy -D warnings`).
[lints.rust]
unexpected_cfgs = "warn"
[lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "warn"

[profile.release]
# Smaller shipped shared libraries. codegen-units = 1 shaves ~21% off the cdylib
# (17.8 → 14.0 MB) for ~2x the clean-build codegen time; lto = "fat" measured as
# no further win over thin, so keep thin.
strip = true
lto = "thin"
codegen-units = 1

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "sync"] }
# Property-based round-trip testing of the driver against the emulator (integration test only).
proptest = "1"
# Driver manager: loads the built cdylib through the C ABI for the FFI smoke test.
# Same git pin as adbc_core / adbc_ffi above (the three must share one revision).
adbc_driver_manager = { git = "https://github.com/fornwall/arrow-adbc", rev = "786e7f3488eb71b200ece775b027a647cf42db9e" }
# Admin clients, used by the emulator integration test to create the test instance and database.
# Pinned to the same git revision as the google-cloud family above (see the note there).
google-cloud-spanner-admin-instance-v1 = { git = "https://github.com/fornwall/google-cloud-rust", rev = "3872d2885c6da3a9463e85b50bf1fe8e9ddc1fa1" }
google-cloud-spanner-admin-database-v1 = { git = "https://github.com/fornwall/google-cloud-rust", rev = "3872d2885c6da3a9463e85b50bf1fe8e9ddc1fa1" }
# Benchmark harness for benches/conversion.rs. Slim feature set: `cargo_bench_support` is what
# `cargo bench` needs; the default plotters/rayon extras are skipped.
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
# Names the gax error/status types so the error-mapping unit test can build a real gax error.
# google-cloud-spanner re-exports this crate's `Error` at runtime, so this is a test-only dependency.
# Same git pin as the google-cloud family above (see the note there).
google-cloud-gax = { git = "https://github.com/fornwall/google-cloud-rust", rev = "3872d2885c6da3a9463e85b50bf1fe8e9ddc1fa1" }
# In-process mock `google.spanner.v1.Spanner` gRPC server (mockall + tonic), used by
# tests/mock_spanner.rs to inject *logical* gRPC faults (ABORTED, mid-stream UNAVAILABLE, a hung
# stream) fully offline — the complement of the Toxiproxy transport-fault harness (see
# tests/RESILIENCE.md). This is the same mock the pinned client uses for its own end-to-end tests,
# so its request/response protos match what the client sends on the wire.
# Same git pin as the google-cloud family above (see the note there).
spanner-grpc-mock = { git = "https://github.com/fornwall/google-cloud-rust", rev = "3872d2885c6da3a9463e85b50bf1fe8e9ddc1fa1" }
# Used by tests/mock_spanner.rs to script the mock server: gRPC statuses (tonic), hand-encoded
# `google.rpc.Status`/`RetryInfo` error details (prost/prost-types/bytes). Versions track what
# the google-cloud family already pulls in, so these add no new major dependency lines.
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
bytes = "1"
