[package]
name = "adbc-spanner"
version = "0.7.0"
edition = "2024"
rust-version = "1.97"
license = "Apache-2.0"
description = "ADBC (Arrow Database Connectivity) driver for Google Cloud Spanner"
repository = "https://github.com/fornwall/adbc-spanner"
homepage = "https://github.com/fornwall/adbc-spanner"
documentation = "https://docs.rs/adbc-spanner"
readme = "README.md"
keywords = ["adbc", "arrow", "spanner", "database", "gcp"]
# Both slugs are valid crates.io categories.
categories = ["database", "api-bindings"]
# Keep the published package to what a consumer needs; CI, scripts and the crate lock
# are not useful to downstream builds.
exclude = [".github/", "scripts/", "/fuzz", "/adbc-validation", "/Cargo.lock"]

[package.metadata.docs.rs]
# Document the FFI entrypoint too.
all-features = true

# Release automation via cargo-release (https://github.com/crate-ci/cargo-release).
[package.metadata.release]
# Only cut releases from main.
allow-branch = ["main"]
# Tag as vX.Y.Z — this matches the `tags: ["v*"]` trigger of the shared-library release
# workflow, so pushing the tag builds and attaches the platform libraries to the GitHub Release.
tag-name = "v{{version}}"
tag-message = "Release {{version}}"
pre-release-commit-message = "Release {{version}}"
# Refuse to create/push the release tag unless the checks CI also enforces pass locally
# first. cargo-release pushes the "Release X.Y.Z" commit and the vX.Y.Z tag together, and the
# tag triggers the irreversible publish workflow (libraries.yml → PyPI wheels + GitHub Release
# assets); a red commit must never get that far. This mirrors ci.yml's gates (fmt, clippy, the
# test suite) before the tag is minted. The emulator-gated integration/resilience tests
# self-skip offline, so this hook covers the unit tests + doctests locally; the ci-gate job in
# libraries.yml additionally blocks publishing until the full CI run (emulator included) is
# green on the tagged commit.
pre-release-hook = ["sh", "-c", "cargo fmt --all --check && cargo clippy --all-targets --all-features -- -D warnings && cargo test"]
# Keep the Python package's checked-in dev-fallback version in step with the crate. Release
# wheels do not depend on it (CI overwrites the file from the pushed tag), this just stops the
# committed copy from drifting.
pre-release-replacements = [
    { file = "python/adbc_driver_spanner/_version.py", search = "__version__ = \"[0-9][^\"]*\"", replace = "__version__ = \"{{version}}\"", exactly = 1 },
]
# Publishing is disabled while the google-cloud-* crates are pinned to git (see the dependency
# note below) — crates.io rejects git dependencies. Re-enable once those are versioned releases.
publish = false
push = true

[lib]
# cdylib: the loadable ADBC driver shared library
#         (libadbc_spanner.so / libadbc_spanner.dylib / adbc_spanner.dll).
# rlib:   lets Rust code depend on this crate directly.
crate-type = ["cdylib", "rlib"]

[features]
default = ["ffi"]
# Export the C ABI `AdbcSpannerInit` entrypoint so the cdylib is a driver the ADBC
# driver manager (any language) can load. Disable for a pure-Rust rlib dependency.
ffi = ["dep:adbc_ffi"]
# Exposes internal parsing helpers under `adbc_spanner::fuzzing` for the fuzz targets.
# Not a stable API; used only by the `fuzz/` crate. Pulls in `arbitrary` so the
# option-fuzzing entry point can take a derived-`Arbitrary` input type.
fuzzing = ["dep:arbitrary"]

[[bench]]
# Criterion benchmarks over the Spanner-rows → Arrow conversion hot path (src/conversion.rs),
# run offline (no network/emulator) via `cargo bench`.
name = "conversion"
harness = false

[dependencies]
# Two dependency families are pinned to git revisions (temporary). When reverting either to a
# versioned crates.io release, follow the single revert checklist in CLAUDE.md "Temporary git
# pins" — it enumerates every location (all these Cargo.toml lines, deny.toml, README.md, the
# `publish = false` release gate) and the invariant that the three arrow-adbc crates share one rev.
# --- adbc_core / adbc_ffi pinned to a git revision (temporary) ---
# The abstract ADBC driver traits, and the C FFI driver exporter that generates the
# `AdbcSpannerInit` entrypoint for the shared library. Pinned to apache/arrow-adbc `main`,
# which carries three FFI fixes that are not yet in the latest crates.io release (0.23):
#   1. `release_ffi_error` is idempotent — it nulls the error's message / private_data /
#      release pointers after freeing, so a second release (which consumers do via the
#      standard `if (error.release) error.release(&error)` idiom) is a safe no-op rather
#      than a double-free.
#   2. `AdbcStatementExecuteQuery` writes `rows_affected = -1` on the query path (a result
#      stream was requested) instead of leaving the caller's out-parameter untouched
#      (https://github.com/apache/arrow-adbc/pull/4469).
#   3. The exporter preserves the caller's `AdbcError.private_data` on the ADBC 1.0.0 path
#      instead of clobbering it (https://github.com/apache/arrow-adbc/pull/4473).
# Together they let the C++ `adbc_validation` suite behave correctly against this driver
# (see adbc-validation/), including its `StatementTest.ErrorCompatibility` case. Revert to a
# versioned crates.io release once these ship in one.
adbc_core = { git = "https://github.com/apache/arrow-adbc", rev = "198f39a9f0ec3e6965c8f50c0bbf85141e2cc4ab" }
adbc_ffi = { git = "https://github.com/apache/arrow-adbc", rev = "198f39a9f0ec3e6965c8f50c0bbf85141e2cc4ab", optional = true }
# Arrow types the ADBC traits are expressed in. Kept in the range the (git) adbc crates
# allow (>=58, <60) so the RecordBatch / Schema / RecordBatchReader types unify across them.
arrow-array = ">=58, <60"
arrow-schema = ">=58, <60"
# Offset / null buffers for building Arrow List arrays (ARRAY columns).
arrow-buffer = ">=58, <60"
# --- google-cloud-* pinned to a git revision (temporary) ---
# We map Spanner STRUCT columns to native Arrow Struct types, which needs
# `Type::struct_type()` to introspect struct field names/types. That accessor
# exists on google-cloud-rust `main` but is NOT in a crates.io release yet (the
# latest, 0.34.2-preview, lacks it). Until a release ships it, we pin the whole
# google-cloud family (spanner + auth + lro + admin) to the SAME git revision so
# their shared internal crates (gax, gaxi, ...) resolve to one compatible copy.
# NOTE: git dependencies cannot be published to crates.io — switch these back to
# versioned releases once `Type::struct_type()` is published.
google-cloud-spanner = { git = "https://github.com/googleapis/google-cloud-rust", rev = "deac9e2f8e72fc1251801f3e68b194984081cc70" }
# Anonymous / service-account credentials.
google-cloud-auth = { git = "https://github.com/googleapis/google-cloud-rust", rev = "deac9e2f8e72fc1251801f3e68b194984081cc70" }
# The `Poller` trait, to await the admin `UpdateDatabaseDdl` long-running operation used for DDL.
google-cloud-lro = { git = "https://github.com/googleapis/google-cloud-rust", rev = "deac9e2f8e72fc1251801f3e68b194984081cc70" }
# Well-known-types `Duration`, the type `set_max_commit_delay` takes for the `spanner.commit.max_delay`
# option. Already in the graph (google-cloud-spanner depends on it as `wkt`); naming it directly lets
# `src/request.rs` build the commit-delay value. Same git pin as the google-cloud family above.
google-cloud-wkt = { git = "https://github.com/googleapis/google-cloud-rust", rev = "deac9e2f8e72fc1251801f3e68b194984081cc70" }
# The Spanner client is async; we bridge it to the synchronous ADBC traits with a
# dedicated multi-thread runtime.
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
# `stream::iter` + `StreamExt::buffer_unordered` to run the per-table `get_statistics`
# aggregate scans with bounded concurrency on the shared runtime.
futures-util = "0.3"
# `float_roundtrip` makes the float *parser* round-trip-accurate (nearest-f64), matching ryu on the
# serialize side. Without it serde_json's default fast parser can land one ULP off, so a decoded
# partition descriptor carrying a large float re-encodes to a *different* value on each pass — the
# `decode → encode` fixed point the partition round-trip relies on never settles. See the
# `partition_descriptor_round_trips_large_floats` regression test in `connection.rs`.
serde_json = { version = "1", features = ["float_roundtrip"] }
base64 = "0.22"
# Build the `Authorization: Bearer <token>` header for the static-token credential backing the
# `spanner.auth.access_token` option (a minimal `google-cloud-auth` `CredentialsProvider`). Same `http`
# major version the google-cloud-auth family uses, so `HeaderMap` / `Extensions` unify across crates.
http = "1"
# Parsing Spanner's string-encoded DATE / TIMESTAMP values into Arrow Date32 / Timestamp, and
# formatting them (plus NUMERIC) back to those wire strings when binding parameters.
chrono = { version = "0.4", default-features = false, features = ["std"] }
# Only pulled in by the `fuzzing` feature: derives `Arbitrary` for the option-fuzz input type.
arbitrary = { version = "1", features = ["derive"], optional = true }
# Names the gax `error::rpc::StatusDetails` type so `from_spanner` (src/error.rs) can forward
# `google.rpc.Status` details (RetryInfo on ABORTED, ErrorInfo, ...) into the ADBC error's
# `details`. Already in the dependency graph — google-cloud-spanner re-exports this crate's
# `Error` — so this adds no new code, it only names the types. Same git pin as the
# google-cloud family above (see the note there).
google-cloud-gax = { git = "https://github.com/googleapis/google-cloud-rust", rev = "deac9e2f8e72fc1251801f3e68b194984081cc70" }

# Lints applied in local dev too (CI additionally runs `clippy -D warnings`).
[lints.rust]
# `asan_canary` is the ADBC-validation `rust-asan` leg's tripwire cfg (src/asan_canary.rs, set only
# by scripts/run-adbc-validation.sh). Declare it so `clippy -D warnings` stays clean everywhere it
# is NOT set (including `--all-features`, which does not set a bare `--cfg`).
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(asan_canary)'] }
missing_docs = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
# Every unsafe operation must sit in an explicit `unsafe {}` block, even inside an `unsafe fn`.
# The only unsafe fns are the C-ABI entrypoints generated by `export_driver!` in `src/ffi.rs`,
# which already wrap their bodies this way. The crate-wide `unsafe_code` deny/forbid and the
# single audited allow on `mod ffi` live in `src/lib.rs` (they are feature-conditional).
unsafe_op_in_unsafe_fn = "deny"

# A few clippy idiom lints promoted from `allow`/pedantic so CI's `clippy -D warnings` keeps the
# codebase on the modern constructions (2021→2024 edition sweep) instead of letting the older forms
# creep back:
#   manual_let_else        — `let ... else { return/panic }` over `let x = match { _ => diverge }`
#   map_unwrap_or          — `.map_or(d, f)` over `.map(f).unwrap_or(d)` / `...unwrap_or_else`
#   manual_is_variant_and  — `.is_ok_and`/`.is_some_and` over `.map(..).unwrap_or(false)` etc.
#   manual_string_new      — `String::new()` over `"".to_string()` / `"".into()`
#   needless_collect       — drop an intermediate `collect()` feeding a single iterator consumer
[lints.clippy]
manual_let_else = "warn"
map_unwrap_or = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
needless_collect = "warn"

[lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "warn"

[profile.release]
# Smaller shipped shared libraries. codegen-units = 1 shaves ~21% off the cdylib
# (17.8 → 14.0 MB) for ~2x the clean-build codegen time; lto = "fat" measured as
# no further win over thin, so keep thin.
strip = true
lto = "thin"
codegen-units = 1

# Profiling profile for `cargo flamegraph` / `perf`: release-optimized code but with
# debug symbols kept (release strips them, which would leave the flamegraph with no
# function names). Use via `cargo flamegraph --profile profiling ...`.
[profile.profiling]
inherits = "release"
strip = false
debug = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "sync"] }
# Property-based round-trip testing of the driver against the emulator (integration test only).
proptest = "1"
# Driver manager: loads the built cdylib through the C ABI for the FFI smoke test.
# Same git pin as adbc_core / adbc_ffi above (the three must share one revision).
adbc_driver_manager = { git = "https://github.com/apache/arrow-adbc", rev = "198f39a9f0ec3e6965c8f50c0bbf85141e2cc4ab" }
# Loads the built cdylib directly (bypassing the driver manager) so the raw-FFI lifecycle test
# can drive double-release / error-struct-reuse paths the managed wrappers never hit. Already in
# the dependency graph via adbc_driver_manager; same version range.
libloading = "0.9"
# Admin clients, used by the emulator integration test to create the test instance and database.
# Pinned to the same git revision as the google-cloud family above (see the note there).
google-cloud-spanner-admin-instance-v1 = { git = "https://github.com/googleapis/google-cloud-rust", rev = "deac9e2f8e72fc1251801f3e68b194984081cc70" }
google-cloud-spanner-admin-database-v1 = { git = "https://github.com/googleapis/google-cloud-rust", rev = "deac9e2f8e72fc1251801f3e68b194984081cc70" }
# Benchmark harness for benches/conversion.rs. Slim feature set: `cargo_bench_support` is what
# `cargo bench` needs; the default plotters/rayon extras are skipped.
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
# In-process mock `google.spanner.v1.Spanner` gRPC server (mockall + tonic), used by
# tests/mock_spanner.rs to inject *logical* gRPC faults (ABORTED, mid-stream UNAVAILABLE, a hung
# stream) fully offline — the complement of the Toxiproxy transport-fault harness (see
# tests/RESILIENCE.md). This is the same mock the pinned client uses for its own end-to-end tests,
# so its request/response protos match what the client sends on the wire.
# Same git pin as the google-cloud family above (see the note there).
spanner-grpc-mock = { git = "https://github.com/googleapis/google-cloud-rust", rev = "deac9e2f8e72fc1251801f3e68b194984081cc70" }
# Used by tests/mock_spanner.rs to script the mock server: gRPC statuses (tonic), hand-encoded
# `google.rpc.Status`/`RetryInfo` error details (prost/prost-types/bytes). Versions track what
# the google-cloud family already pulls in, so these add no new major dependency lines.
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
bytes = "1"
